common/force-app/main/default/objects/ROI_Log__c/ROI_Log__c.object-meta.xml
<CustomObject>
    <label>ROI Log</label>
    <nameField>
        <displayFormat>ROI-{0000}</displayFormat>
        <label>ROI Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ROI Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>