common/force-app/main/default/objects/ROI_Log__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>ROI Log</relationshipLabel>
    <relationshipName>ROI_Log</relationshipName>
    <type>Lookup</type>
</CustomField>