common/force-app/main/default/objects/ROI_Log__c/fields/Returns_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Returns_Percentage__c</fullName>
    <label>Returns Percentage</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>